--- a/src/components/EventPlanner/EventPlanner.styles.css
+++ b/src/components/EventPlanner/EventPlanner.styles.css
@@ -36,3 +36,12 @@
 .no-subs-found {
   height: 200px;
 }
+
+.dark {
+  background-color: #333;
+  color: #fff;
+}
+.light {
+  background-color: #fff;
+  color: #333;
+}
